== Version ?: Not Released ==

* Added running count to Hamcrest_MatcherAssert with methods to get and reset it.

* Added Hamcrest_Type_IsScalar to assert is_scalar() (bool, int, float, double, string).

    assertThat($count, scalarValue());

* Added Hamcrest_Collection_IsTraversableWithSize a la Hamcrest_Collection_IsIterableWithSize.

    assertThat($iterator, traversableWithSize(5));

* Added aliases to match the Java API.

    hasEntry() -> hasKeyValuePair()
    hasValue() -> hasItemInArray()
    contains() -> arrayContaining()
    containsInAnyOrder() -> arrayContainingInAnyOrder()

* Added subtype to TypeSafeMatcher to enforce object class or resource type.

* TypeSafeDiagnosingMatcher now extends TypeSafeMatcher.


== Version 0.2.0: Released Jul 14 2010 ==

Issues Fixed: 109, 111, 114, 115

* Description::appendValues() and appendValueList() accept Iterator and IteratorAggregate. [111]
  BaseDescription::appendValue() handles IteratorAggregate.

* assertThat() accepts a single boolean parameter and
  wraps any non-Matcher third parameter with equalTo().

* Removed null return value from assertThat(). [114]

* Fixed wrong variable name in contains(). [109]

* Added Hamcrest_Core_IsSet to assert isset().

    assertThat(array('foo' => 'bar'), set('foo'));
    assertThat(array('foo' => 'bar'), notSet('bar'));

* Added Hamcrest_Core_IsTypeOf to assert built-in types with gettype(). [115]
  Types: array, boolean, double, integer, null, resource, and string.
  Note that gettype() returns "double" for float values.

    assertThat($count, typeOf('integer'));
    assertThat(3.14159, typeOf('double'));
    assertThat(array('foo', 'bar'), typeOf('array'));

* Added Hamcrest_Type_IsInteger, IsBoolean, etc.

    assertThat($count, integerValue());
    assertThat('5', numericValue());
    assertThat('foo', stringValue());

* Added Hamcrest_Type_IsCallable to assert is_callable().

    assertThat('preg_match', callable());